--- a/Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj
+++ b/Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj
@@ -4,12 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
     <ProjectGuid>{A0C4E31E-AC75-4F39-9F59-0AA19D9B8F46}</ProjectGuid>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <PackageReference Include="Tailspin.SpaceGame.Web.Models" Version="1.0.0-CI-20210712-190350" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\images\avatars\" />
-  </ItemGroup>1.0.0-CI-20210712-190350
+  </ItemGroup>
 </Project>
